--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 	<html lang="en">
 	<head>
 		<meta charset="utf-8">
@@ -10,7 +10,21 @@
 		<h1>Hello I'm Akash</h1>
 		<h2>I'm a professional designer and developer</h2>
 
-		<img>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+		Suspendisse in risus lorem. Nulla sed augue sit amet dolor lobortis tristique eget ac neque.
+		Nullam placerat varius dolor, a porttitor nisi. Proin bibendum, mi id feugiat auctor, arcu lectus
+		egestas neque, quis egesta s purus urna eget nibh. Donec sed justo mauris.
+		In porttitor, enim a scelerisque fermentum, </p>
+
+			<img src="images/akash.jpg"width="400" alt="akash">
+
+			<a href="index.html">Home</a>
+
+			<a href="about.html">Services</a>
+
+			<a href="https://www.facebook.com/real.ibnulakash" target="_blank">Facebook</a>
+
+
 
 	</body>
 	</html>
