--- a/about.html
+++ b/about.html
@@ -5,6 +5,28 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>My Services</title>
 	</head>
+	<link rel="stylesheet" href="css/style.css">
+
+	<header>
+		
+		<h2 class="logo">
+			D&D
+		</h2>
+		
+		<a href="index.html">
+			Home
+		</a>
+
+		<a href="about.html">
+			Services
+		</a>
+
+		<a href="https://www.facebook.com/real.ibnulakash" target="_blank">
+			Facebook
+		</a>
+		
+	</header>
+
 	<body>
 	
 		<h1>My Services</h1>
@@ -13,13 +35,6 @@
 			<p>Graphic Design, Web Design, Ux Design & Web Development</p>
 
 			<img src="images/service.jpg" alt="akash">
-
-			<a href="index.html">Home</a>
 			
-			<a href="about.html">Services</a>
-
-			<a href="https://www.facebook.com/real.ibnulakash" target="_blank">Facebook</a>
-			<a href="https://https://www.behance.net/acash9" target="_blank">Portfolio</a>
-
 	</body>
 	</html>
