--- a/index.html
+++ b/index.html
@@ -3,28 +3,58 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Ibnul Alrazi Akash</title>
+		
+		<title>
+		Ibnul-Akash Portfolio
+		</title>
+		<link rel="stylesheet" href="css/style.css">
 	</head>
-	<body>
 	
-		<h1>Hello I'm Akash</h1>
-		<h2>I'm a professional designer and developer</h2>
+	<header>
+		
+		<h2 class="logo">
+			D&D
+		</h2>
+		
+		<a href="index.html">
+			Home
+		</a>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-		Suspendisse in risus lorem. Nulla sed augue sit amet dolor lobortis tristique eget ac neque.
-		Nullam placerat varius dolor, a porttitor nisi. Proin bibendum, mi id feugiat auctor, arcu lectus
-		egestas neque, quis egesta s purus urna eget nibh. Donec sed justo mauris.
-		In porttitor, enim a scelerisque fermentum, </p>
+		<a href="about.html">
+			Services
+		</a>
 
-			<img src="images/akash.jpg"width="400" alt="akash">
+		<a href="https://www.facebook.com/real.ibnulakash" target="_blank">
+			Facebook
+		</a>
+		
+	</header>
+	
+	<body>
 
-			<a href="index.html">Home</a>
+		<img class="profile-pic" src="images/akash.jpg"width="200" alt="akash">
 
-			<a href="about.html">Services</a>
+	
+		<h1>
+		Hello I'm Akash
+		</h1>
+		
+		<h2>
+		I'm a professional designer and developer
+		</h2>
 
-			<a href="https://www.facebook.com/real.ibnulakash" target="_blank">Facebook</a>
-
-
-
-	</body>
+		<p>
+			“Where do ideas come from? From looking at one thing, and seeing another.
+			From fooling around, from playing with possibilities, from speculating,
+			from changing, pushing, pulling, transforming, and if you’re lucky,
+			you come up with something worth saving, using, 
+			and building on. That’s where the game stops and the work begins.” 
+		</p>
+		
+		<button>
+			Hire Me
+		</button>
+		
+		</body>
+		
 	</html>
